--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,15 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "dotenv>=0.9.9",
+    "loguru>=0.7.3",
+]
+
+[dependency-groups]
+dev = [
+    "src",
+]
+
+[tool.uv.sources]
+src = { workspace = true }
