chore: add entries for Jupyter Notebook checkpoints and environment variables to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ wheels/
 
 # Virtual environments
 .venv
+
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+# Environment variables
+.env
+*.env
