--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "black>=25.1.0",
+    "ipykernel>=6.29.5",
+    "ruff>=0.12.1",
     "src",
 ]
 
