--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
     "loguru>=0.7.3",
+    "typer>=0.16.1",
 ]
 
 [dependency-groups]
