--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
     "loguru>=0.7.3",
+    "pytest>=8.4.2",
+    "pytest-mock>=3.15.1",
     "typer>=0.16.1",
 ]
 
