--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,19 +7,20 @@ name = "src"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.14"
 dependencies = [
     "dotenv>=0.9.9",
     "loguru>=0.7.3",
-    "pytest>=8.4.2",
-    "pytest-mock>=3.15.1",
     "typer>=0.16.1",
 ]
 
 [dependency-groups]
 dev = [
     "black>=25.1.0",
+    "flake8>=7.3.0",
     "ipykernel>=6.29.5",
+    "pytest>=8.4.2",
+    "pytest-mock>=3.15.1",
     "ruff>=0.12.1",
     "src",
 ]
