--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,6 @@
 ignore = E731,E266,E501,C901,W503
 max-line-length = 99
 exclude = .git,notebooks,references,models,data,.venv,__pycache__
+
+[tool:pytest]
+testpaths = tests
